# pallete-generator

./: .gitignore  CMakeLists.txt  PalleteGenerator.c  README.md
.github/worflows/: cd.yml
.github/workflows/: cd.yml
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
